Completed code base

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /toyrobotconsole/ToyRobot/.vs
 /toyrobotconsole/ToyRobot/bin/Debug/net6.0
 /toyrobotconsole/ToyRobot/obj
+/toyrobotconsole/Tests.ToyRobot/bin/Debug/net6.0
+/toyrobotconsole/Tests.ToyRobot/obj
